docs(intelli-ai-terminal): 优化 TerminalSettingsPanel 中 URL 连接创建方式以提升兼容性